--- a/src/app/layout/admin-layout/admin-menu/admin-menu.component.html
+++ b/src/app/layout/admin-layout/admin-menu/admin-menu.component.html
@@ -5,6 +5,10 @@
                 <a [routerLink]="['/admin-dashboard']"> <i class="fas fa-home" style="margin-right: 10px"> </i>
                     Dashboard </a>
             </button>
+            <button class="menubtn">
+                <a [routerLink]="['/admin-dashboard/machines']"> <i class="fas fa-home" style="margin-right: 10px"> </i>
+                    Machines </a>
+            </button>
             <button type="button" class="menubtn" data-toggle="collapsebtn" data-target="#account"
                 (click)="accountcollapse()">
                 <i class="fas fa-user" style="margin-right: 15px"></i> Account
