senso e na fracca de altra robbetta

--- a/src/app/layout/admin-layout/admin-menu/admin-menu.component.html
+++ b/src/app/layout/admin-layout/admin-menu/admin-menu.component.html
@@ -6,6 +6,10 @@
                     Dashboard </a>
             </button>
             <button class="menubtn">
+                <a [routerLink]="['/admin-dashboard/sensor']"> <i class="fas fa-home" style="margin-right: 10px"> </i>
+                    Sensor </a>
+            </button>
+            <button class="menubtn">
                 <a [routerLink]="['/admin-dashboard/machines']"> <i class="fas fa-home" style="margin-right: 10px"> </i>
                     Machines </a>
             </button>
