--- a/src/app/admin/users/users.component.html
+++ b/src/app/admin/users/users.component.html
@@ -24,7 +24,7 @@
         </tr>
         <tr>
           <td>
-            <input placeholder="username" [(ngModel)]="usertoinsert.username">
+           <input placeholder="username" [(ngModel)]="usertoinsert.username">
           </td>
           <td>
             <input placeholder="password" [(ngModel)]="usertoinsert.password">
@@ -51,8 +51,8 @@
           </td>
           <td>
             <select [(ngModel)]="user.usertype">
-              <option [selected]="user.usertype===ADMIN" value="ADMIN">ADMIN</option>
-              <option [selected]="user.usertype===USER" value="USER">USER</option>
+              <option [selected]="user.usertype" value="ADMIN">ADMIN</option>
+              <option [selected]="user.usertype" value="USER">USER</option>
             </select>
           </td>
           <td>
