--- a/src/app/admin/materials/materials.component.html
+++ b/src/app/admin/materials/materials.component.html
@@ -53,10 +53,10 @@
             </td>
             <td>
               <select [(ngModel)]="material.materialType">
-                <option [selected]="material.type===GENERIC" value="GENERIC">GENERIC</option>
-                <option [selected]="material.type===GLASS" value="GLASS">GLASS</option>
-                <option [selected]="material.type===PAPER" value="PAPER">PAPER</option>
-                <option [selected]="material.type===PLASTIC" value="PLASTIC">PLASTIC</option>
+                <option [selected]="material.materialType" value="GENERIC">GENERIC</option>
+                <option [selected]="material.materialType" value="GLASS">GLASS</option>
+                <option [selected]="material.materialType" value="PAPER">PAPER</option>
+                <option [selected]="material.materialType" value="PLASTIC">PLASTIC</option>
               </select>
             </td>
             <td>
