--- a/src/app/user/user-dashboard/user-dashboard.component.html
+++ b/src/app/user/user-dashboard/user-dashboard.component.html
@@ -18,7 +18,7 @@
         <input placeholder="Inserire quantità" [(ngModel)]="material.materialsQuantity">
       </td>
       <td>
-        <button (click)="update(material)">Avvio macchinario</button>
+        <button (click)="calcola(material.materialsQuantity, material)">Avvio macchinario</button>
        </td>
     </tr>
  
