--- a/src/app/layout/admin-layout/admin-menu/admin-menu.component.css
+++ b/src/app/layout/admin-layout/admin-menu/admin-menu.component.css
@@ -3,7 +3,7 @@
     width: 100%;
     top: 0;
     left: 0;
-    background-color: #1e282d;
+    background-color: #2d1e20;
     overflow-x: visible;
     transition: 0.5s;
     padding-top: 0;
