--- a/src/app/layout/user-layout/user-menu/user-menu.component.html
+++ b/src/app/layout/user-layout/user-menu/user-menu.component.html
@@ -1,5 +1,5 @@
- <div>
+ <div class="sidenav">
      <button class="menubtn" (click)="logout()">
         <i class="fas fa-sign-out-alt" style="margin-right: 15px"></i>Logout
-    </button>
+      </button>
 </div>
