--- a/src/app/layout/user-layout/user-menu/user-menu.component.css
+++ b/src/app/layout/user-layout/user-menu/user-menu.component.css
@@ -1,3 +1,17 @@
+.sidenav{  
+    height:94vh;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background-color: #2d1e1e;
+    overflow-x: visible;
+    transition: 0.5s;
+    padding-top: 0;
+
+}
+
+
+
 .menubtn{
     width: 100%;
     text-align: left;
@@ -7,4 +21,5 @@
     padding-left: 20px;
     padding-top: 10px;
     padding-bottom: 10px;
+   
 }
