--- a/src/app/layout/admin-layout/admin-menu/admin-menu.component.css
+++ b/src/app/layout/admin-layout/admin-menu/admin-menu.component.css
@@ -9,6 +9,12 @@
     padding-top: 0;
   }
   
+  .modifyImage{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
   
   .menubtn{
       width: 100%;
