--- a/src/app/layout/admin-layout/admin-menu/admin-menu.component.html
+++ b/src/app/layout/admin-layout/admin-menu/admin-menu.component.html
@@ -51,6 +51,16 @@
             <button class="menubtn" (click)="logout()">
                 <i class="fas fa-sign-out-alt" style="margin-right: 15px"></i>Logout
             </button>
+
+           
+             <div class="modifyImage">
+                <img src="https://www.gifanimate.com/data/media/576/cestino-dei-rifiuti-immagine-animata-0006.gif" border="0" alt="cestino-dei-rifiuti-immagine-animata-0006" />
+            
+            <div>
+
+
+           
+
         </div>
     </div>
 </div>
