--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -10,7 +10,7 @@
       </div>
   </div>
   <div class="col-md-4" style="text-align: center">
-      <img src="../../../assets/logo.svg" alt="header" style="width:30%; height: 30%;">
+      <img src="assets/img/contrader-logo.png" alt="header" style="width:15%; height: 80%; margin-top: 0.2%;">
   </div>
   <div class="col-md-1" style="text-align: center">
   </div>
