--- a/src/app/admin/machines/machine.component.css
+++ b/src/app/admin/machines/machine.component.css
@@ -1,6 +1,12 @@
 *{
     text-align: center;
 }
+.imageCustom{
+    width: 100%;
+    height: 100%;
+    background-repeat:no-repeat;
+    background-size: 100%;
+}
 
 /*Tables*/
 table {
