--- a/src/app/admin/machines/machine.component.html
+++ b/src/app/admin/machines/machine.component.html
@@ -1,10 +1,13 @@
-<div class="container">
-    <div class="row mt-5">
+
+<div class="container imageCustom" src="assets/img/spazzatura.jpg" style="background-image: url(assets/img/spazzatura.jpg);" >
+  
+    <div class="row mt-5" >
+      
       <div class="col-md-1">
   
       </div>
-      <div class="col-md-10">
-        <table>
+      <div class="col-md-10 ">
+        <table  >
           <tr>
             <th>
               Machine Name
@@ -49,7 +52,7 @@
         </table>
       </div>
       <div class="col-md-1">
-  
       </div>
+      
     </div>
   </div>
