--- a/src/app/user/user-2machine/user-2machine.component.css
+++ b/src/app/user/user-2machine/user-2machine.component.css
@@ -9,3 +9,10 @@ table{
 button {
     text-align: center;
   }
+
+  .myImage{
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: 100%;
+  }
