--- a/src/app/user/user-dashboard/user-dashboard.component.css
+++ b/src/app/user/user-dashboard/user-dashboard.component.css
@@ -16,7 +16,17 @@ td {
     padding: 5px;
   }
 
-  th {
+  #primo{
+    background-color: #4287f5;
+    text-align: right;
+    color: white;
+  }
+  #secondo{
+    background-color: #4287f5;
+    text-align: left;
+    color: white;
+  }
+  #terzo{
     background-color: #4287f5;
     text-align: center;
     color: white;
@@ -24,4 +34,11 @@ td {
 
   button {
     text-align: center;
+  }
+
+  .myImage{
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: 100%;
   }
