--- a/src/app/layout/admin-layout/admin-layout.component.html
+++ b/src/app/layout/admin-layout/admin-layout.component.html
@@ -1,16 +1,16 @@
-<div class="row no-gutters" style="height: 8vh">
-  <div class="col-md-12 no-gutters">
-      <app-header></app-header>
-  </div>
+<div class="row no-gutters">
+    <div class="col-md-12 no-gutters">
+        <app-header></app-header>
+    </div>
 </div>
-<div class="row no-gutters " style="height: 92vh">
-<div class="col-md-2 no-gutters" style="height: 92vh">
-  <div id="menu" >
-      <app-admin-menu></app-admin-menu>
-  </div>
-</div>
-<div class="col-md-10 no-gutters "style="height: 92vh">
+<div class="row no-gutters ">
+    <!-- <div class="col-md-2 no-gutters" style="height: 92vh">
+        <div id="menu">
+            <app-admin-menu></app-admin-menu>
+        </div>
+    </div> -->
+    <div class="col-md-12 no-gutters " style="height: 92vh">
 
-  <router-outlet></router-outlet>  
-</div>
+        <router-outlet></router-outlet>
+    </div>
 </div>
