--- a/src/app/layout/admin-layout/admin-menu/admin-menu.component.html
+++ b/src/app/layout/admin-layout/admin-menu/admin-menu.component.html
@@ -1,11 +1,11 @@
-<div class="row">
+<!--<div class="row">
     <div class="col-md-12">
         <div class="sidenav">
             <button class="menubtn">
                 <a [routerLink]="['/admin-dashboard']"> <i class="fas fa-home" style="margin-right: 10px"> </i>
                     Dashboard </a>
             </button>
-            <button class="menubtn">
+             <button class="menubtn">
                 <a [routerLink]="['/admin-dashboard/sensor']"> <i class="fas fa-home" style="margin-right: 10px"> </i>
                     Sensor </a>
             </button>
@@ -52,15 +52,19 @@
                 <i class="fas fa-sign-out-alt" style="margin-right: 15px"></i>Logout
             </button>
 
-           
-             <div class="modifyImage">
-                <img src="https://www.gifanimate.com/data/media/576/cestino-dei-rifiuti-immagine-animata-0006.gif" border="0" alt="cestino-dei-rifiuti-immagine-animata-0006" />
-            
-            <div>
+
+<div class="modifyImage">
+    <img src="https://www.gifanimate.com/data/media/576/cestino-dei-rifiuti-immagine-animata-0006.gif" border="0" alt="cestino-dei-rifiuti-immagine-animata-0006" />
+
+    <div>
 
 
-           
 
-        </div>
+
     </div>
 </div>
+</div>-->
+<div class="modifyImage">
+    <img src="https://www.gifanimate.com/data/media/576/cestino-dei-rifiuti-immagine-animata-0006.gif" border="0" alt="cestino-dei-rifiuti-immagine-animata-0006" />
+
+    <div>
