--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,4 +1,55 @@
-<div id="header" class="row no-gutters">
+<div class="container">
+    <nav class="navbar navbar-dark bg-dark">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span></button>
+
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <div>
+                <a [routerLink]="['/admin-dashboard/machines']"> <i class="fas fa-home" style="margin-right: 10px">
+            </i> Machines </a>
+                <a [routerLink]="['/admin-dashboard/materials']"> <i class="fas fa-home" style="margin-right: 10px">
+            </i> Materials </a>
+                <a [routerLink]="['/admin-dashboard/sensor']"> <i class="fas fa-home" style="margin-right: 10px"> </i> Sensor </a>
+                <a [routerLink]="['/admin-dashboard/users']"> <i class="fas fa-home" style="margin-right: 10px">
+              </i> Manage Users </a>
+
+            </div>
+            <!-- <ul class=" navbar-nav">
+
+                <li class="nav-item active"><button class="menubtn">
+        <a [routerLink]="['/admin-dashboard/materials']"> <i class="fas fa-home" style="margin-right: 10px">
+            </i> Materials </a>
+    </button></li>
+                <li class="nav-item active"> <button class="menubtn">
+                  <a [routerLink]="['/admin-dashboard/materials']"> <i class="fas fa-home" style="margin-right: 10px">
+                  </i> Materials </a>
+  </button></li>
+                <li class="nav-item active"><button class="menubtn">
+    <a [routerLink]="['/admin-dashboard/sensor']"> <i class="fas fa-home" style="margin-right: 10px"> </i>
+        Sensor </a>
+</button></li>
+                <li class="nav-item active"><button class="menubtn">
+  <a [routerLink]="['/admin-dashboard/users']"> <i class="fas fa-home" style="margin-right: 10px">
+      </i> Manage Users </a>
+</button></li>
+                <li class="nav-item active"><button class="menubtn" (click)="logout()">
+  <i class="fas fa-sign-out-alt" style="margin-right: 15px"></i>Logout
+</button></li>
+            </ul>-->
+        </div>
+    </nav>
+</div>
+
+
+
+
+
+
+
+
+
+
+<!--<div id="header" class="row no-gutters ">
   <div class="col-md-2 " style="background-color: #1e282d; display: inline-block">
       <p><img src="../../../assets/user.svg" style="height:30px; margin:0.5%;"> {{user.username}} {{user.usertype}}</p>
   </div>
@@ -19,4 +70,4 @@
 <a><i class="fas fa-bell" style="font-size:25px; padding:12px"></i></a> 
 <a><i class="fas fa-envelope" style="font-size:25px; padding:12px"></i></a> 
   </div>
-</div>
+</div>-->
